--- a/app/index.html
+++ b/app/index.html
@@ -26,24 +26,27 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+
     <div class="container" ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      g.src='//www.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
+    <!--<script>-->
+      <!--var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];-->
+      <!--(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];-->
+      <!--g.src='//www.google-analytics.com/ga.js';-->
+      <!--s.parentNode.insertBefore(g,s)}(document,'script'));-->
+    <!--</script>-->
 
     <script src="bower_components/angular/angular.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+
+
     <!-- endbuild -->
 
-        <!-- build:js scripts/plugins.js -->
+        <!-- build:js scripts/plugins.j s -->
         <script src="bower_components/jquery/jquery.js"></script>
         <script src="bower_components/sass-bootstrap/js/affix.js"></script>
         <script src="bower_components/sass-bootstrap/js/alert.js"></script>
@@ -61,10 +64,12 @@
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
-    <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+        <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+        <script src="scripts/filters/reverse.js"></script>
         <!-- endbuild -->
 </body>
 </html>
